# SF_WO_Agent

./: .gitignore  README.md  SF_Stub.json  agent.py  consolidated_notebook_utils 3.py  custom_tool.py  main.py  new_stub.json  pyproject.toml  requirements.txt  sf_check.ipynb  tasks.py  tools.py
crew_template/: crew.py
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat  docx2txt  dul-receive-pack  dul-upload-pack  jp.py  jsondiff  jsonpatch  jsonpointer
src/sf_wo_agent/: crew.py  crew_1.py  logs.txt  main.py  main_1.py
src/sf_wo_agent/config/: SF_Stub.json  agents.py  agents.yaml  gemini_config.json  model_setup.py  tasks.py  tasks.yaml
src/sf_wo_agent/tools/: SF_Stub.py  custom_tool.py  custom_tools.py  custom_tools_1.py
